# B2Cshop

./: LICENSE  README.md  lamp29.sql
blog/: composer.json
blog/app/Http/: Kernel.php
blog/app/Http/Controllers/Admin/: AdministratorController.php  IndexController.php  LoginController.php  UserController.php
blog/app/Http/Controllers/Api/: Common.php
blog/app/Http/Controllers/Common/: CommonController.php  IncController.php
blog/app/Http/Controllers/Home/: IndexController.php  PersonalController.php  ShopController.php  UserController.php
blog/app/Http/Middleware/: CheckAdminPower.php  CheckAdminSession.php
blog/app/Http/Requests/Admin/: AdministratorAddRequest.php  (+3 more)
blog/app/Http/ViewComposers/: ActionComposer.php
blog/app/Model/: Admin.php  Goods.php  Role.php  User.php
blog/app/Providers/: ActionListProvider.php
blog/config/: app.php
blog/database/migrations/: 2017_09_22_150033_create_users_table.php  2017_09_22_193250_create_orders_table.php  2017_09_22_193326_create_order_detail_table.php  2017_09_22_193332_create_address__table.php  2017_09_22_193332_create_shop_type_table.php  2017_09_24_210204_create_admin_table.php  2017_09_25_113319_create_users_table.php  2017_09_25_141807_create_error_user_table.php  2017_09_25_143212_create_address_table.php  2017_09_25_143212_create_shop_type_table.php  2017_09_26_155453_create_integral_record_table.php  2017_09_26_190531_create_good_comment_table.php  2017_09_26_190628_create_comment_images_table.php  2017_09_26_233520_create_role_table.php  2017_09_27_060919_create_shop_goods_table.php  2017_09_27_064548_create_shop_pic_table.php  2017_09_27_064914_create_shop_price_table.php  2017_09_27_070106_create_shop_text_table.php  2017_09_28_104647_create_integral_order_table.php  2017_09_28_111611_create_integral_goods_table.php
blog/public/Home/css/: dlstyle.css  hmstyle.css
blog/public/Home/js/: list.js
blog/public/xunsearch-full-1.4.10/libuuid-1.0.0/: Makefile  Makefile.am  Makefile.in  README  compare.lo  config.h  config.h.in  config.status  configure  configure.in  copy.lo  gen_uuid.c  gen_uuid.lo  libtool  pack.lo  parse.lo  tst_uuid  unpack.lo  unparse.lo  uuid.pc  uuidP.h  uuid_time  uuid_time.c  uuid_time.lo  uuid_time2.c
blog/public/xunsearch-full-1.4.10/libuuid-1.0.0/.deps/: clear.Plo  compare.Plo  copy.Plo  gen_uuid.Plo  isnull.Plo  pack.Plo  parse.Plo  tst_uuid.Po  unpack.Plo  unparse.Plo  uuid_time.Plo  uuid_time2.Po
blog/public/xunsearch-full-1.4.10/libuuid-1.0.0/.libs/: libuuid.la  libuuid.lai  tst_uuid  uuid_time
blog/resources/views/Admin/: index.blade.php  login.blade.php
blog/resources/views/Common/: tip.blade.php
blog/resources/views/Home/: Detail.blade.php  Index.blade.php  List.blade.php  Login.blade.php  Register.blade.php
blog/resources/views/Layout/: HomeBase.blade.php  adminBase.blade.php  personBase.blade.php
blog/routes/: web.php  web.php.rej
(+31 files in other folders)
